Interpret alt-left and alt-right keycodes for xterm.

--- a/.inputrc
+++ b/.inputrc
@@ -18,6 +18,8 @@ Meta-Rubout: backward-kill-word
 # da una parola all'altra
 "\e[1;3C": forward-word
 "\e[1;3D": backward-word
+"\e[1;9C": forward-word
+"\e[1;9D": backward-word
 
 # Pseudo vim mappings
 "\el": forward-word
