--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set-window-option -g xterm-keys on
 
 # use mouse
 set-window -g mode-mouse on
-set-option -g mouse-select-pane on
+set-option -g mouse-select-pane off
 
 # we use vim
 set-window-option -g mode-keys vi
