--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # set terminal
-set -g default-terminal "xterm-256color"
+set-option -g default-terminal screen-256color
 set-window-option -g xterm-keys on
 
 # use mouse
