--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,10 +73,9 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 # copy mode
-#bind-key -n C-PPage copy-mode -u
-bind-key -t vi-copy -n Home history-top
-bind-key -t vi-copy -n End history-bottom
 ## list keys: tmux list-keys -t vi-copy
+bind-key -t vi-copy -n Home start-of-line
+bind-key -t vi-copy -n End end-of-line
 ## alt-movements
 bind-key -t vi-copy -n M-h previous-word
 bind-key -t vi-copy -n M-j page-down
