Bind M and m in tmux to enable/disable mouse support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,13 +2,24 @@
 set-option -g default-terminal screen-256color
 set-window-option -g xterm-keys on
 
-# use mouse
-set-window -g mode-mouse on
-set-option -g mouse-select-pane off
+# Toggle mouse on with ^B M
+bind M \
+	set -g mode-mouse on \;\
+	set -g mouse-resize-pane on \;\
+	set -g mouse-select-pane on \;\
+	set -g mouse-select-window on \;\
+	display 'Mouse: ON'
+
+# Toggle mouse off with ^B m
+bind m \
+	set -g mode-mouse off \;\
+	set -g mouse-resize-pane off \;\
+	set -g mouse-select-pane off \;\
+	set -g mouse-select-window off \;\
+	display 'Mouse: OFF'
 
 # we use vim
 set-window-option -g mode-keys vi
-set-window-option -g mode-mouse off
 
 # listen for activity on no window
 #set -g bell-action none
