Don't export anymore tmux env variable for current directory

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,11 +53,11 @@ bind-key b set-option status
 
 # ctrl-Ins create a new window and retain the current path
 #bind-key -n C-IC new-window
-bind-key -n C-IC run-shell 'tmux new-window "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
+#bind-key -n C-IC run-shell 'tmux new-window "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
 
 # split windows
-bind-key h run-shell 'tmux split-window -v "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
-bind-key v run-shell 'tmux split-window -h "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
+#bind-key h run-shell 'tmux split-window -v "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
+#bind-key v run-shell 'tmux split-window -h "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
 bind-key k confirm-before kill-pane
 
 # ctrl-prev/next cycles through windows
