Update tmux configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,10 @@ set-window-option -g mode-keys vi
 # list for activity on all windows
 set -g bell-action any
 
+# enable activity alerts
+setw -g monitor-activity on
+set -g visual-activity on
+
 # start window indexing at one instead of zero
 set -g base-index 1
 
@@ -42,11 +46,6 @@ set-window-option -g window-status-current-attr underscore
 set-window-option -g automatic-rename on
 set-window-option -g utf8 on
 set-option -g pane-active-border-fg green
-
-#set -g status-left ‘#[fg=default]#H’
-#set -g status-right ‘#[fg=yellow]#(uptime | cut -d “,” -f 2-)’
-#set -g status-interval 1
-#set -g status-right '#[default]#(cut -d " " -f 1-4 /proc/loadavg) %Y-%m-%d %H:%M '
 
 # toggle statusbar
 bind-key b set-option status
@@ -74,6 +73,9 @@ bind-key -n C-down select-pane -D
 bind-key -n C-left select-pane -L
 bind-key -n C-right select-pane -R
 
+# ctrl-prev to enter copy mode
+bind-key -n S-PPage copy-mode -u
+
 # open a man-page in new window
 #bind / command-prompt "split-window 'exec man %%'"
 # quick view of processes
@@ -93,14 +95,15 @@ bind-key -t vi-copy -n M-j page-down
 bind-key -t vi-copy -n M-k page-up
 bind-key -t vi-copy -n M-l next-word
 
-# handle mouse wheel
+# enable native xterm scrolling with Shift + PageUp and mouse wheel in tmux
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#set -g terminal-overrides 'xterm*:knp=\033[5~:smcup@:rmcup@'
 
-# CLIPBOARD selection integration
-# Copy tmux paste buffer to CLIPBOARD
-#bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
-# Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
-#bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+# TODO: MAC
+# brew install reattach-to-user-namespace
+# set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash...
+# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer
 
 # scrollback buffer n lines
 set -g history-limit 10000
@@ -108,4 +111,11 @@ set -g history-limit 10000
 # on-screen time for display-panes in ms
 set -g display-panes-time 2000
 
-bind r source-file ~/.tmux.conf
+bind r \
+	source-file ~/.tmux.conf \; \
+	display-message 'Load ~/.tmux.conf'
+
+# Load platform specific configuration
+if-shell 'test "$(uname)" = "Linux"' 'source-file ~/.tmux-linux.conf'
+#if-shell 'test "$(uname)" = "Darwin"' 'source-file ~/.tmux-macosx.conf'
+
