Update tmux config

--- a/.tmux-linux.conf
+++ b/.tmux-linux.conf
@@ -6,4 +6,5 @@ bind-key -n M-p run "xclip -o -selection primary | tmux load-buffer -; tmux past
 
 # Set the status line
 set -g status-interval 5
-set -g status-right '#[default] #(cut -d" " -f 1-4 /proc/loadavg) %Y-%m-%d %H:%M '
+#set -g status-right '#[default] #(cut -d" " -f 1-4 /proc/loadavg) %Y-%m-%d %H:%M '
+set -g status-right '#[default]'
