--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,14 +76,10 @@ bind-key -n C-right select-pane -R
 # ctrl-prev to enter copy mode
 bind-key -n S-PPage copy-mode -u
 
-# open a man-page in new window
-#bind / command-prompt "split-window 'exec man %%'"
-# quick view of processes
-#bind '~' split-window "exec zsh -c 'htop -u fifr'"
-
 # v and y like vi in copy-mode
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
 # copy mode
 ## list keys: tmux list-keys -t vi-copy
@@ -98,12 +94,6 @@ bind-key -t vi-copy -n M-l next-word
 # enable native xterm scrolling with Shift + PageUp and mouse wheel in tmux
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 #set -g terminal-overrides 'xterm*:knp=\033[5~:smcup@:rmcup@'
-
-# TODO: MAC
-# brew install reattach-to-user-namespace
-# set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash...
-# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-# bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer
 
 # scrollback buffer n lines
 set -g history-limit 10000
