tmux: disable set-clipboard by default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # set terminal
 set-option -g default-terminal screen-256color
+set-option -s set-clipboard off
 set-window-option -g xterm-keys on
 
 # Toggle mouse on with ^B M
