tmux: update key binding syntax

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,7 +45,7 @@ set -g status-bg default
 set -g status-fg default
 set-window-option -g window-status-current-attr underscore
 set-window-option -g automatic-rename on
-set-window-option -g utf8 on
+#set-window-option -g utf8 on
 set-option -g pane-active-border-fg green
 
 # toggle statusbar
@@ -78,19 +78,19 @@ bind-key -n C-right select-pane -R
 bind-key -n S-PPage copy-mode -u
 
 # v and y like vi in copy-mode
-bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+#bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # copy mode
 ## list keys: tmux list-keys -t vi-copy
-bind-key -t vi-copy -n Home start-of-line
-bind-key -t vi-copy -n End end-of-line
+bind-key -T copy-mode-vi -n Home send-keys -X start-of-line
+bind-key -T copy-mode-vi -n End send-keys -X end-of-line
 ## alt-movements
-bind-key -t vi-copy -n M-h previous-word
-bind-key -t vi-copy -n M-j page-down
-bind-key -t vi-copy -n M-k page-up
-bind-key -t vi-copy -n M-l next-word
+bind-key -T copy-mode-vi -n M-h send-keys -X previous-word
+bind-key -T copy-mode-vi -n M-j send-keys -X page-down
+bind-key -T copy-mode-vi -n M-k send-keys -X page-up
+bind-key -T copy-mode-vi -n M-l send-keys -X next-word
 
 # enable native xterm scrolling with Shift + PageUp and mouse wheel in tmux
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
