tmux: use different key binding on macosx

--- a/.tmux-linux.conf
+++ b/.tmux-linux.conf
@@ -8,3 +8,36 @@ bind-key -n M-p run "xclip -o -selection primary | tmux load-buffer -; tmux past
 set -g status-interval 5
 #set -g status-right '#[default] #(cut -d" " -f 1-4 /proc/loadavg) %Y-%m-%d %H:%M '
 set -g status-right '#[default]'
+
+# ctrl-prev to enter copy mode
+bind-key -n S-PPage copy-mode -u
+
+# v and y like vi in copy-mode
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# ctrl-Ins create a new window and retain the current path
+#bind-key -n C-IC new-window
+#bind-key -n C-IC run-shell 'tmux new-window "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
+
+# split windows
+#bind-key h run-shell 'tmux split-window -v "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
+#bind-key v run-shell 'tmux split-window -h "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
+bind-key k confirm-before kill-pane
+
+# ctrl-prev/next cycles through windows
+bind-key -n C-NPage next
+bind-key -n C-PPage prev
+
+# ctrl-shift-prev/next moves windows
+bind-key -n C-S-NPage swap-window -t +
+bind-key -n C-S-PPage swap-window -t -
+
+# ctrl-up/down/left/right cycles through panes
+bind-key -n C-up select-pane -U
+bind-key -n C-down select-pane -D
+bind-key -n C-left select-pane -L
+bind-key -n C-right select-pane -R
+
+# enable native xterm scrolling with Shift + PageUp and mouse wheel in tmux
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
