--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,44 +43,13 @@ set -s escape-time 0
 
 set -g status-bg default
 set -g status-fg default
-set-window-option -g window-status-current-attr underscore
+set-window-option -g window-status-current-style underscore
 set-window-option -g automatic-rename on
 #set-window-option -g utf8 on
-set-option -g pane-active-border-fg green
+set-option -g pane-active-border-style fg=green
 
 # toggle statusbar
 bind-key b set-option status
-
-# ctrl-Ins create a new window and retain the current path
-#bind-key -n C-IC new-window
-#bind-key -n C-IC run-shell 'tmux new-window "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
-
-# split windows
-#bind-key h run-shell 'tmux split-window -v "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
-#bind-key v run-shell 'tmux split-window -h "cd $(tmux display -p "\$TMUXPWD_#I#P"); exec \$SHELL"'
-bind-key k confirm-before kill-pane
-
-# ctrl-prev/next cycles through windows
-bind-key -n C-NPage next
-bind-key -n C-PPage prev
-
-# ctrl-shift-prev/next moves windows
-bind-key -n C-S-NPage swap-window -t +
-bind-key -n C-S-PPage swap-window -t -
-
-# ctrl-up/down/left/right cycles through panes
-bind-key -n C-up select-pane -U
-bind-key -n C-down select-pane -D
-bind-key -n C-left select-pane -L
-bind-key -n C-right select-pane -R
-
-# ctrl-prev to enter copy mode
-bind-key -n S-PPage copy-mode -u
-
-# v and y like vi in copy-mode
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-#bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # copy mode
 ## list keys: tmux list-keys -t vi-copy
@@ -91,10 +60,6 @@ bind-key -T copy-mode-vi -n M-h send-keys -X previous-word
 bind-key -T copy-mode-vi -n M-j send-keys -X page-down
 bind-key -T copy-mode-vi -n M-k send-keys -X page-up
 bind-key -T copy-mode-vi -n M-l send-keys -X next-word
-
-# enable native xterm scrolling with Shift + PageUp and mouse wheel in tmux
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-#set -g terminal-overrides 'xterm*:knp=\033[5~:smcup@:rmcup@'
 
 # scrollback buffer n lines
 set -g history-limit 10000
@@ -108,5 +73,5 @@ bind r \
 
 # Load platform specific configuration
 if-shell 'test "$(uname)" = "Linux"' 'source-file ~/.tmux-linux.conf'
-#if-shell 'test "$(uname)" = "Darwin"' 'source-file ~/.tmux-macosx.conf'
+if-shell 'test "$(uname)" = "Darwin"' 'source-file ~/.tmux-macosx.conf'
 
